[metadata]
name = bclreader
version = 0.0.1
author = Uli Dobramysl
author_email = ulrich.dobramysl@gmail.com
description = Read Illumina base call (.bcl) files and extract sequences
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src